@@ -2,10 +2,8 @@ package de.hka_iwi_1.avg_s2_producer.repository;
 
 import de.hka_iwi_1.avg_s2_producer.entity.Share;
 import de.hka_iwi_1.avg_s2_producer.entity.StockMarket;
-import de.hka_iwi_1.avg_s2_producer.service.RandomStockPriceGenerator;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -13,8 +11,7 @@ import java.util.stream.Stream;
 
 public class DB {
 
-static final List<StockMarket> STOCK_MARKET;
-    private static final RandomStockPriceGenerator randomStockPriceGenerator = new RandomStockPriceGenerator();
+static List<StockMarket> STOCK_MARKET;
 
 static {
     STOCK_MARKET = Stream.of(
@@ -25,7 +22,7 @@ static {
                             Share.builder()
                                     .availableShares(100)
                                     // TODO: Preise generieren lassen
-                                    .priceHistory()
+                                    .priceHistory(List.of(new BigDecimal("124.03")))
                                     .wkn("123456")
                                     .build()
                     ).collect(Collectors.toList()))
@@ -37,7 +34,7 @@ static {
                             Share.builder()
                                     .availableShares(200)
                                     // TODO: Preise generieren lassen
-                                    .priceHistory(Arrays.asList(new BigDecimal("384.85"), new BigDecimal("384.95")))
+                                    .priceHistory(List.of(new BigDecimal("90.89")))
                                     .wkn("234567")
                                     .build()
                     ).collect(Collectors.toList()))
